--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,6 +3,13 @@
   display: block;
   margin-top: 30rpx;
 }
+.nodata_block{
+  display: block!important;
+}
+.color_gray{
+  color: #9e9e9e;
+  font-size: 26rpx;
+}
 .color_red{
   color: red;
 }
@@ -79,8 +86,11 @@
   background-color: #F5F3F4;
   text-align: center;
 }
+.container .tab-item{
+  padding: 10rpx 0;
+}
 .container .tabs view{
-  border-bottom: 1rpx solid #F5F3F4;
+  border-bottom: 2rpx solid #eee;
   /* border-left: 6rpx solid orange; */
 }
 .container .tabs text{
@@ -159,4 +169,11 @@
   float: left;
   text-align: center;
   background-color: orange;
+}
+
+.no_shop{
+  width: 100%;
+  text-align: center;
+  margin-top: 300rpx;
+  display: none;
 }
